third_party/llvm-project/clang/test/SemaOpenCLCXX/half.clcpp
//RUN: %clang_cc1 %s -triple spir -verify -fsyntax-only

#pragma OPENCL EXTENSION cl_khr_fp16 : disable

typedef half half2 __attribute__((ext_vector_type(2)));

half f(half2 h2) { // expected-error{{declaring function return value of type 'half' is not allowed ; did you forget * ?}}
    return h2.s0; // expected-error{{loading directly from pointer to type '__private half' requires cl_khr_fp16. Use vector data load builtin functions instead}}
}

#pragma OPENCL EXTENSION cl_khr_fp16 : enable

half f(half2 h2) {
    return h2.s0;
}
